# wider

./: .gitignore  .gitmodules  README.md  pyproject.toml
recipes/DeepSeek-R1-Distill-Qwen-1.5B/grpo/: config_sanity.yaml  config_sanity_discovery.yaml  config_sanity_lora.yaml  config_sanity_perl.yaml
recipes/accelerate/: zero2.yaml  zero2_simple.yaml
scripts/: openrs.py
slurm/: eval_base.py  evaluate_hf.slurm  train.slurm  train_discovery-4xH200.slurm  train_perl-4xA100.slurm  train_sanity_perl-4xA100.sh
src/open_r1/: choreo.py  configs.py  eval.py  grpo.py  rewards.py  trainer.py
src/open_r1/utils/: evaluation.py  hub.py  model_utils.py
src/open_r1/utils/ioi/: piston_client.py
