[project]
name = "open-r1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "math-verify==0.5.2",
    "datasets>=3.5.0",
    "torch>=2.7.0",
    "wandb>=0.19.10",
    "ipykernel>=6.29.5",
    "transformers>=4.51.3",
    "liger-kernel>=0.5.8 ; sys_platform == 'linux'",
    "deepspeed>=0.16.7 ; sys_platform == 'linux'",
    "accelerate>=1.6.0 ; sys_platform == 'linux'",
    "lighteval>=0.8.1",
    "fire>=0.7.0",
    "peft>=0.15.2",
    "trl>=0.17.0",
]

[dependency-groups]
dev = [
    "open-r1",
]

[tool.uv.sources]
open-r1 = { workspace = true }
